# python-grpc-open-telemetry-example

./: .gitignore  Dockerfile.fastapi  Dockerfile.grpc  LICENSE  README.md  docker-compose.yaml  env.example  pyproject.toml
apps/fastapi_app/: Dockerfile  main.py  pyproject.toml
apps/grpc_app/: main.py  metrics.py  pyproject.toml  task_pb2.py  task_pb2_grpc.py  task_servicer.py  test_client.py
core/: pyproject.toml
core/src/core/: __init__.py  database.py  models.py  schemas.py  services.py
grafana/provisioning/dashboards/: grpc-dashboard.json
prometheus/: prometheus.yml
proto/: task.proto
services/task_service/api/: pyproject.toml
services/task_service/core/: pyproject.toml
services/task_service/grpc/: pyproject.toml
services/user_service/api/: pyproject.toml
services/user_service/core/: models.py  pyproject.toml  repository.py
services/user_service/grpc/: pyproject.toml
