[project]
name = "core"
version = "0.1.0"
description = "Core business logic and database access layer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.10",
    "logfire[sqlalchemy]>=2.0.0,<4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core"]
