[project]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI application for task management"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "core",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.32.1",
    "logfire[fastapi]>=2.0.0,<4.0.0",
]

[tool.uv.sources]
core = { workspace = true }
