[project]
name = "grpc-app"
version = "0.1.0"
description = "gRPC application for task management"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "core",
    "grpcio>=1.62.0,<1.70.0",
    "grpcio-tools>=1.62.0,<1.70.0",
    "protobuf>=4.25.0,<5.0.0",
    "opentelemetry-sdk>=1.21.0,<1.31.0",
    "opentelemetry-instrumentation-grpc>=0.42b0,<0.45.0",
    "logfire>=2.0.0,<4.0.0",
]

[tool.uv.sources]
core = { workspace = true }
