[project]
name = "task-service-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "example-app[fastapi]",
    "example-app[fastapi-observability]",
]

[tool.uv.sources]
example-app = { workspace = true }
"shared.dto" = { workspace = true }
